Non-reentrant libmpeg2 initialisation
As of 00d1f50e, libmpeg2 is calling signal() and using a static jump buffer every time the plugin is started. This is obviously not thread-safe / not re-entrant.
Edited by Rémi Denis-Courmont
As of 00d1f50e, libmpeg2 is calling signal() and using a static jump buffer every time the plugin is started. This is obviously not thread-safe / not re-entrant.
VideoLAN code repository instance