libmpeg2: fix PPC regression

00d1f50eff60f30ac77ffe8f4df6af4668affcbd introduced a regression for PPC
since the `signal()` based detection for altivec in libmpeg2 is not thread
safe unlike our own. here we restore use of our own detection for PPC,
bypassing libmpeg2's unsafe auto-detection otherwise triggered in
`mpeg2_init()`.

fixes #25948.